--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ztirk.github.io/react-gh-pages/web-portfolio-v2.0",
+  "homepage": "https://ztirk.github.io/web-portfolio-v2.0",
   "name": "web-portfolio-v2.0",
   "version": "0.1.0",
   "private": true,
